@@ -1,3 +1,11 @@
+Build trunk
+------------------------------------------------------------------------------------------------------------------------
+
+Improvements
+ - Big performance improvement on launching commands by avoiding login shell by caching environment
+
+
+
 Build 2010110901
 ------------------------------------------------------------------------------------------------------------------------
 
